<resources>
    <string name="app_name">Facturacion</string>
    <string name="correo">Correo</string>
    <string name="clave">Clave</string>
    <string name="facturacion_ventas">Facturacion Ventas</string>
    <string name="ingresar">Ingresar</string>
    <string name="todo">TODO</string>
    <string name="opciones_de_usuario">Opciones de Usuario</string>
    <string name="facturacion">Registrar Venta</string>
    <string name="agregar_produto">Agregar producto</string>
    <string name="formulario_registro_productos">Formulario Registro Productos</string>
    <string name="identificacion">Identificacion</string>
    <string name="precio_unidad">Precio Unidad</string>
    <string name="registrar">Registrar</string>
    <string name="listar_todos_los_productos">Listar Todos los productos</string>
    <string name="todos_nustros_productos">Todos Nuestros Productos</string>
    <string name="factura">Factura</string>
    <string name="visualizar_factura">Visualizar Ventas   </string>
    <string name="codigo_del_producto">Codigo Del Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="Codigo_Producto">TextView</string>
    <string name="Precio_Unidad">TextView</string>
    <string name="eliminar_producto">Eliminar Producto</string>

</resources>