<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="134dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <LinearLayout
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvCodigoProducto"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/Codigo_Producto" />

            <TextView
                android:id="@+id/txvPrecioUnidad"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/Precio_Unidad" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEliminarProducto"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:text="@string/eliminar_producto"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>